--- a/serial_cost_sharing/templates/serial_cost_sharing/Results.html
+++ b/serial_cost_sharing/templates/serial_cost_sharing/Results.html
@@ -17,20 +17,26 @@ http://getbootstrap.com/components/
 -->
 
 <table class="table-condensed" style="width:500px; margin-top:20px;">
-        <tr><td>You contributed:</td><td>{{ player.contribution }}</td></tr>
-        <tr><td>Other participants contributed:</td><td></td></tr>
+        
+		<tr><td>Your choice of contribution:</td><td>{{ player.contribution }} of {{ Constants.cost }}</td></tr>
+        <tr><td>Other participants choose to contribute:</td><td></td></tr>
         {% for p in player.get_others_in_group %}
-            <tr><td></td><td>{{ p.contribution }}</td></tr>
+            <tr><td></td><td>{{ p.contribution }} of {{ Constants.cost }}</td></tr>
         {% endfor %}
 
         <tr><td colspan="2"><hr/></td></tr>
-		<tr><td>Is the project provision successful?  -- {{ whether_provision }}</td></tr> 
-        
+		<tr><td>Is the project provision successful? </td><td>{{ whether_provision }}</td></tr> 
+		<tr><td>Number of members: </td><td>{{ member_num }} </td></tr>
+		<tr><td>Are you a member? </td><td>{{ player.member }} </td></tr>
+		
+		
 		<tr><td colspan="2"><hr/></td></tr>
-		<tr><td>So you will get:</td><td>{{ individual_earnings }}</td></tr>
-    </table>
-    <p></p>
+		<tr><td>Your valuation of the project: </td><td>{{ player.private_value }}</td><tr>
+		<tr><td>Your actual contribution: </td><td> {{ player.share }} of {{ Constants.cost }}</td><tr>
+		<tr><td>Your payoff:</td><td>{{ individual_earnings }}</td></tr>
+	</table>
+	<p></p>
 
-    {% next_button %}
+	{% next_button %}
 {% endblock %}
 
