--- a/serial_cost_sharing/templates/serial_cost_sharing/Instruction.html
+++ b/serial_cost_sharing/templates/serial_cost_sharing/Instruction.html
@@ -16,72 +16,72 @@
     	The messages are used to determine whether your group buys the gadget and which members are users. If you submit "0", then you are a non-user and your earnings are {{ Constants.payoff_if_excluded }}. If you send "1/3", it means that you are willing to be a user only if the cost is split three ways. "1/2" means that you are willing to be a user if the cost is split either two or three ways. The gadget is purchased only if there are enough participants who are willing to take an <strong>equal share</strong> of the cost. The following table summarizes the possible situations. 
     </p>
     
-    <table class="table-bordered" style="width:500px; margin-top:20px;">
-    	<tr><td>Participant 1's choice</td>
-    		<td>Participant 2's choice</td>
-    		<td>Participant 3's choice</td>
-    		<td>Is the gadget purchased</td>
-    		<td>Users</td>
+    <table class="table-bordered" style="width:800px; margin-top:20px;">
+    	<tr><td align="center">Participant 1's choice</td>
+    		<td align="center">Participant 2's choice</td>
+    		<td align="center">Participant 3's choice</td>
+    		<td align="center">Is the gadget purchased</td>
+    		<td align="center">Users</td>
     	</tr>
-    	<tr><td>0</td>
-    		<td>0</td>
-    		<td>0</td>
-    		<td>False</td>
-    		<td>Null</td>
+    	<tr><td align="center">0</td>
+    		<td align="center">0</td>
+    		<td align="center">0</td>
+    		<td align="center">False</td>
+    		<td align="center">Null</td>
     	</tr>
-    	<tr><td>0</td>
-    		<td>0</td>
-    		<td>1/3</td>
-    		<td>False</td>
-    		<td>Null</td>
+    	<tr><td align="center">0</td>
+    		<td align="center">0</td>
+    		<td align="center">1/3</td>
+    		<td align="center">False</td>
+    		<td align="center">Null</td>
     	</tr>
-    	<tr><td>0</td>
-    		<td>0</td>
-    		<td>1/2</td>
-    		<td>False</td>
-    		<td>Null</td>
+    	<tr><td align="center">0</td>
+    		<td align="center">0</td>
+    		<td align="center">1/2</td>
+    		<td align="center">False</td>
+    		<td align="center">Null</td>
     	</tr>
-    	<tr><td>0</td>
-    		<td>1/3</td>
-    		<td>1/3</td>
-    		<td>False</td>
-    		<td>Null</td>
+    	<tr><td align="center">0</td>
+    		<td align="center">1/3</td>
+    		<td align="center">1/3</td>
+    		<td align="center">False</td>
+    		<td align="center">Null</td>
     	</tr>
-    	<tr><td>0</td>
-    		<td>1/3</td>
-    		<td>1/2</td>
-    		<td>False</td>
-    		<td>Null</td>
+    	<tr><td align="center">0</td>
+    		<td align="center">1/3</td>
+    		<td align="center">1/2</td>
+    		<td align="center">False</td>
+    		<td align="center">Null</td>
     	</tr>
-    	<tr><td>0</td>
-    		<td>1/2</td>
-    		<td>1/2</td>
-    		<td>True</td>
-    		<td>Participant 2,3</td>
+    	<tr><td align="center">0</td>
+    		<td align="center">1/2</td>
+    		<td align="center">1/2</td>
+    		<td align="center">True</td>
+    		<td align="center">Participant 2,3</td>
     	</tr>
-    	<tr><td>1/3</td>
-    		<td>1/3</td>
-    		<td>1/3</td>
-    		<td>True</td>
-    		<td>Participant 1,2,3</td>
+    	<tr><td align="center">1/3</td>
+    		<td align="center">1/3</td>
+    		<td align="center">1/3</td>
+    		<td align="center">True</td>
+    		<td align="center">Participant 1,2,3</td>
     	</tr>
-    	<tr><td>1/3</td>
-    		<td>1/3</td>
-    		<td>1/2</td>
-    		<td>True</td>
-    		<td>Participant 1,2,3</td>
+    	<tr><td align="center">1/3</td>
+    		<td align="center">1/3</td>
+    		<td align="center">1/2</td>
+    		<td align="center">True</td>
+    		<td align="center">Participant 1,2,3</td>
     	</tr>
-    	<tr><td>1/3</td>
-    		<td>1/2</td>
-    		<td>1/2</td>
-    		<td>True</td>
-    		<td>Participant 1,2,3</td>
+    	<tr><td align="center">1/3</td>
+    		<td align="center">1/2</td>
+    		<td align="center">1/2</td>
+    		<td align="center">True</td>
+    		<td align="center">Participant 1,2,3</td>
     	</tr>
-    	<tr><td>1/2</td>
-    		<td>1/2</td>
-    		<td>1/2</td>
-    		<td>True</td>
-    		<td>Participant 1,2,3</td>
+    	<tr><td align="center">1/2</td>
+    		<td align="center">1/2</td>
+    		<td align="center">1/2</td>
+    		<td align="center">True</td>
+    		<td align="center">Participant 1,2,3</td>
     	</tr>
     </table>
     
@@ -89,7 +89,7 @@
     	Before making any decision, you will learn the user value of the gadget to your. The value of the gadget may differ from participant to participant and is randomly and independently drawn from {{ Constants.valuation }} for each participant. Notice that no one else in your group knows your user value and you do not know the user value of anyone else in your group.
     </p>
     <p>
-    	Nonuser's payoff is 0 since they contributes and receives nothing. 
+    	<strong>Nonuser's payoff</strong> is 0 since they contributes and receives nothing. 
     </p>
     <p>
     	User's payoff is calculated as (in points) <br/>
