--- a/proportional_cost_sharing/templates/proportional_cost_sharing/Results.html
+++ b/proportional_cost_sharing/templates/proportional_cost_sharing/Results.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Page title
+    Results
 {% endblock %}
 
 {% block content %}
@@ -16,6 +16,25 @@ http://getbootstrap.com/components/
 
 -->
 
-    {% next_button %}
+<table class="table-condensed" style="width:500px; margin-top:20px;">
+        
+		<tr><td>Your choice of contribution:</td><td>{{ player.contribution }} of {{ Constants.cost }}</td></tr>
+        <tr><td>Other participants choose to contribute:</td><td></td></tr>
+        {% for p in player.get_others_in_group %}
+            <tr><td></td><td>{{ p.contribution }}</td></tr>
+        {% endfor %}
+
+        <tr><td colspan="2"><hr/></td></tr>
+		<tr><td>Is the gadget purchased? </td><td>{{ whether_provision }}</td></tr> 
+		
+		
+		<tr><td colspan="2"><hr/></td></tr>
+		<tr><td>Your valuation of the gadget: </td><td>{{ player.private_value }}</td><tr>
+		<tr><td>Your actual contribution: </td><td> {{ individual_share }}</td><tr>
+		<tr><td>Your payoff:</td><td>{{ individual_earnings }}</td></tr>
+	</table>
+	<p></p>
+
+	{% next_button %}
 {% endblock %}
 
