--- a/optimal_cost_sharing/templates/optimal_cost_sharing/Instruction.html
+++ b/optimal_cost_sharing/templates/optimal_cost_sharing/Instruction.html
@@ -4,98 +4,92 @@
         In this study, you will be in a randomly formed group of {{ Constants.players_per_group }} participants. Your group must decide whether or not to purchase a fictitious good, called a gadget, and exactly which members of your group are allowed to use the gadget. 
     </p>
     <p>
-        For your group to purchase a gadget, your group must pay a total of {{ Constants.cost }}. It is possible that not everyone in your group is allowed to use the gadget. Those members of your group who are allowed to use the gadget are called users and pay an <strong>equal share</strong> of the cost. Those members of your group who are not allowed to use the gadget are called nonusers and do not pay any share of the cost. 
+        For your group to purchase a gadget, your group must pay a total of {{ Constants.cost }}. 
+    </p>
+    <p>  
+        Before making any decision, you will learn the user value of the gadget to you. The value of the gadget may differ from participant to participant and is randomly and independently drawn from {{ Constants.valuation }} for each participant. Notice that no one else in your group knows your user value and you do not know the user value of anyone else in your group.
+    </p>
+    <p>    
+        To determine whether your group buys the gadget, every member of the group will simultaneously submit a message. Every participant must choose to report to the group his/her user value: "Low", "Median, or "High". Submitting "Low" means that you choose to tell the group your user value being 29, submitting "Median" means that you choose to tell the group your user value being 45, and submitting "High" means that you choose to tell the group your user value being 90. You are free to submit any of these three messages. 
     </p>
     <p>
-        Therefore, if all members are users, the cost is split three ways, so each member pays 34 points. If only two members are users, the cost is split two ways, and each of two users pay 51 points, and if only one member is a user, then this user pays the entire {{ Constants.cost }}.
-    </p>
-    <p>
-    	To determine whether your group buys the gadget, every member of the group will simultaneously submit a message. Every participant must choose one of three messages: willing to contribute "0", "1/3" or "1/2" of the total cost. You are free to submit any of these three messages. 
-    </P>
-    <p>
-    	The messages are used to determine whether your group buys the gadget and which members are users. If you submit "0", then you are a non-user and your earnings are {{ Constants.payoff_if_excluded }}. If you send "1/3", it means that you are willing to be a user only if the cost is split three ways. "1/2" means that you are willing to be a user if the cost is split either two or three ways. The gadget is purchased only if there are enough participants who are willing to take an <strong>equal share</strong> of the cost. The following table summarizes the possible situations. 
+    	The messages are used to determine whether your group buys the gadget and which members are users. If the sum of the reported user values is less than 104, the gadget is not purchased and everyone gets (and pays) nothing. If the sum of the reported user values is greater than or equal to 104, the gadget is purchased and each member gets his/her own user value while pays a portion of the cost depending on each group member's report. The following table summarizes the possible payment scheme. 
     </p>
     
     <table class="table-bordered" style="width:800px; margin-top:20px;">
-    	<tr><td align="center">Participant 1's choice</td>
-    		<td align="center">Participant 2's choice</td>
-    		<td align="center">Participant 3's choice</td>
-    		<td align="center">Is the gadget purchased</td>
-    		<td align="center">Users</td>
+    	<tr><td align="center">Your report</td>
+    		<td align="center">Other members' reports</td>
+    		<td align="center">Is the gadget purchased ?</td>
+    		<td align="center">Your payment</td>
     	</tr>
-    	<tr><td align="center">0</td>
-    		<td align="center">0</td>
-    		<td align="center">0</td>
-    		<td align="center">False</td>
-    		<td align="center">Null</td>
-    	</tr>
-    	<tr><td align="center">0</td>
-    		<td align="center">0</td>
-    		<td align="center">1/3</td>
-    		<td align="center">False</td>
-    		<td align="center">Null</td>
-    	</tr>
-    	<tr><td align="center">0</td>
-    		<td align="center">0</td>
-    		<td align="center">1/2</td>
-    		<td align="center">False</td>
-    		<td align="center">Null</td>
-    	</tr>
-    	<tr><td align="center">0</td>
-    		<td align="center">1/3</td>
-    		<td align="center">1/3</td>
-    		<td align="center">False</td>
-    		<td align="center">Null</td>
-    	</tr>
-    	<tr><td align="center">0</td>
-    		<td align="center">1/3</td>
-    		<td align="center">1/2</td>
-    		<td align="center">False</td>
-    		<td align="center">Null</td>
-    	</tr>
-    	<tr><td align="center">0</td>
-    		<td align="center">1/2</td>
-    		<td align="center">1/2</td>
-    		<td align="center">True</td>
-    		<td align="center">Participant 2,3</td>
-    	</tr>
-    	<tr><td align="center">1/3</td>
-    		<td align="center">1/3</td>
-    		<td align="center">1/3</td>
-    		<td align="center">True</td>
-    		<td align="center">Participant 1,2,3</td>
-    	</tr>
-    	<tr><td align="center">1/3</td>
-    		<td align="center">1/3</td>
-    		<td align="center">1/2</td>
-    		<td align="center">True</td>
-    		<td align="center">Participant 1,2,3</td>
-    	</tr>
-    	<tr><td align="center">1/3</td>
-    		<td align="center">1/2</td>
-    		<td align="center">1/2</td>
-    		<td align="center">True</td>
-    		<td align="center">Participant 1,2,3</td>
-    	</tr>
-    	<tr><td align="center">1/2</td>
-    		<td align="center">1/2</td>
-    		<td align="center">1/2</td>
-    		<td align="center">True</td>
-    		<td align="center">Participant 1,2,3</td>
-    	</tr>
+    	<tr><td align="center" rowspan="6"> Low </td>
+    		<td align="center"> Low, Low </td>
+    		<td align="center"> No </td><td align="center"> 0 </td></tr>
+    	<tr>
+    		<td align="center"> Low, Median </td>
+    		<td align="center"> No </td><td align="center"> 0 </td></tr>
+    	<tr>
+    		<td align="center"> Low, High </td>
+    		<td align="center"> Yes </td><td align="center"> 28 </td></tr>
+    	<tr>
+    		<td align="center"> Median, Median </td>
+    		<td align="center"> Yes </td><td align="center"> 28 </td></tr>
+    	<tr>
+    		<td align="center"> Median, High </td>
+    		<td align="center"> Yes </td><td align="center"> 28 </td></tr>
+    	<tr>
+    		<td align="center"> High, High </td>
+    		<td align="center"> Yes </td><td align="center"> 28 </td></tr>
+    		
+    	<tr><td align="center" rowspan="6"> Median </td>
+    		<td align="center"> Low, Low </td>
+    		<td align="center"> No </td><td align="center"> 0 </td></tr>
+    	<tr>
+    		<td align="center"> Low, Median </td>
+    		<td align="center"> Yes </td><td align="center"> 37 </td></tr>
+    	<tr>
+    		<td align="center"> Low, High </td>
+    		<td align="center"> Yes </td><td align="center"> 29 </td></tr>
+    	<tr>
+    		<td align="center"> Median, Median </td>
+    		<td align="center"> Yes </td><td align="center"> 34 </td></tr>
+    	<tr>
+    		<td align="center"> Median, High </td>
+    		<td align="center"> Yes </td><td align="center"> 32 </td></tr>
+    	<tr>
+    		<td align="center"> High, High </td>
+    		<td align="center"> Yes </td><td align="center"> 28 </td></tr> 
+    		
+    	<tr><td align="center" rowspan="6"> High </td>
+    		<td align="center"> Low, Low </td>
+    		<td align="center"> Yes </td><td align="center"> 46 </td></tr>
+    	<tr>
+    		<td align="center"> Low, Median </td>
+    		<td align="center"> Yes </td><td align="center"> 45 </td></tr>
+    	<tr>
+    		<td align="center"> Low, High </td>
+    		<td align="center"> Yes </td><td align="center"> 37 </td></tr>
+    	<tr>
+    		<td align="center"> Median, Median </td>
+    		<td align="center"> Yes </td><td align="center"> 40 </td></tr>
+    	<tr>
+    		<td align="center"> Median, High </td>
+    		<td align="center"> Yes </td><td align="center"> 37 </td></tr>
+    	<tr>
+    		<td align="center"> High, High </td>
+    		<td align="center"> Yes </td><td align="center"> 34 </td></tr>    		
     </table>
-    
     <p>
-    	Before making any decision, you will learn the user value of the gadget to your. The value of the gadget may differ from participant to participant and is randomly and independently drawn from {{ Constants.valuation }} for each participant. Notice that no one else in your group knows your user value and you do not know the user value of anyone else in your group.
-    </p>
+    	If the gadget is not purchased, everyone's payoff is 0.
+    </P>
     <p>
-    	<strong>Nonuser's payoff</strong> is 0 since they contributes and receives nothing. 
-    </p>
-    <p>
-    	User's payoff is calculated as (in points) <br/>
+    	If the gadget is purchased, everyone will become a user. User's payoff is calculated as (in points) <br/>
     	<strong>
-    		User's payoff = His/her private value of the gadget - Total cost of the gadget / Number of users
+    		User's payoff = His/her private value of the gadget - His/her payment depending on all reports
     	</strong><br/>
+    </p>
+    <p>
+    	Note that all private values are assigned randomly and fixed, while the reports are choices made by the group members.
     </p>
     <p>
     For your convenience, these instructions will remain available to you on all subsequent screens of this study.
