--- a/optimal_cost_sharing/templates/optimal_cost_sharing/Instruction.html
+++ b/optimal_cost_sharing/templates/optimal_cost_sharing/Instruction.html
@@ -24,60 +24,60 @@
     	</tr>
     	<tr><td align="center" rowspan="6"> Low </td>
     		<td align="center"> Low, Low </td>
-    		<td align="center"> No </td><td align="center"> 0 </td></tr>
+    		<td align="center"> No </td><td align="center"> {{Constants.t_L_LL}} </td></tr>
     	<tr>
     		<td align="center"> Low, Median </td>
-    		<td align="center"> No </td><td align="center"> 0 </td></tr>
+    		<td align="center"> No </td><td align="center"> {{Constants.t_L_LM}} </td></tr>
     	<tr>
     		<td align="center"> Low, High </td>
-    		<td align="center"> Yes </td><td align="center"> 28 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_L_LH}} </td></tr>
     	<tr>
     		<td align="center"> Median, Median </td>
-    		<td align="center"> Yes </td><td align="center"> 28 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_L_MM}} </td></tr>
     	<tr>
     		<td align="center"> Median, High </td>
-    		<td align="center"> Yes </td><td align="center"> 28 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_L_MH}} </td></tr>
     	<tr>
     		<td align="center"> High, High </td>
-    		<td align="center"> Yes </td><td align="center"> 28 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_L_HH}} </td></tr>
     		
     	<tr><td align="center" rowspan="6"> Median </td>
     		<td align="center"> Low, Low </td>
-    		<td align="center"> No </td><td align="center"> 0 </td></tr>
+    		<td align="center"> No </td><td align="center"> {{Constants.t_M_LL}} </td></tr>
     	<tr>
     		<td align="center"> Low, Median </td>
-    		<td align="center"> Yes </td><td align="center"> 37 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_M_LM}} </td></tr>
     	<tr>
     		<td align="center"> Low, High </td>
-    		<td align="center"> Yes </td><td align="center"> 29 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_M_LH}} </td></tr>
     	<tr>
     		<td align="center"> Median, Median </td>
-    		<td align="center"> Yes </td><td align="center"> 34 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_M_MM}} </td></tr>
     	<tr>
     		<td align="center"> Median, High </td>
-    		<td align="center"> Yes </td><td align="center"> 32 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_M_MH}} </td></tr>
     	<tr>
     		<td align="center"> High, High </td>
-    		<td align="center"> Yes </td><td align="center"> 28 </td></tr> 
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_M_HH}} </td></tr> 
     		
     	<tr><td align="center" rowspan="6"> High </td>
     		<td align="center"> Low, Low </td>
-    		<td align="center"> Yes </td><td align="center"> 46 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_H_LL}} </td></tr>
     	<tr>
     		<td align="center"> Low, Median </td>
-    		<td align="center"> Yes </td><td align="center"> 45 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_H_LM}} </td></tr>
     	<tr>
     		<td align="center"> Low, High </td>
-    		<td align="center"> Yes </td><td align="center"> 37 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_H_LH}} </td></tr>
     	<tr>
     		<td align="center"> Median, Median </td>
-    		<td align="center"> Yes </td><td align="center"> 40 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_H_MM}} </td></tr>
     	<tr>
     		<td align="center"> Median, High </td>
-    		<td align="center"> Yes </td><td align="center"> 37 </td></tr>
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_H_MH}} </td></tr>
     	<tr>
     		<td align="center"> High, High </td>
-    		<td align="center"> Yes </td><td align="center"> 34 </td></tr>    		
+    		<td align="center"> Yes </td><td align="center"> {{Constants.t_H_HH}} </td></tr>    		
     </table>
     <p>
     	If the gadget is not purchased, everyone's payoff is 0.
