--- a/optimal_cost_sharing/templates/optimal_cost_sharing/Contribute.html
+++ b/optimal_cost_sharing/templates/optimal_cost_sharing/Contribute.html
@@ -6,7 +6,14 @@
 {% endblock %}
 
 {% block content %}
-
+	<table>
+		<tr>
+			<td>Round number:</td>
+			<td>{{ subsession.round_number }} / {{ Constants.num_rounds }}</td>
+		</tr>
+	</table>
+	<tr><td colspan="2"><hr/></td></tr>
+	
 	<p>
 		The cost of the gadget is <strong>{{ Constants.cost }}</strong>.
 	</p>
