--- a/optimal_cost_sharing/templates/optimal_cost_sharing/Results.html
+++ b/optimal_cost_sharing/templates/optimal_cost_sharing/Results.html
@@ -17,7 +17,12 @@ http://getbootstrap.com/components/
 -->
 
 <table class="table-condensed" style="width:500px; margin-top:20px;">
-        
+		<tr>
+			<td>Round number:</td>
+			<td>{{ subsession.round_number }} / {{ Constants.num_rounds }}</td>
+		</tr>
+		<tr><td colspan="2"><hr/></td></tr>
+		        
 		<tr><td>Your report of type:</td><td>{{ player.contribution }}</td></tr>
         <tr><td>Other participants' reports:</td><td></td></tr>
         {% for p in player.get_others_in_group %}
