bot debug cover page

--- a/lab_cover_page/templates/lab_cover_page/Cover_page.html
+++ b/lab_cover_page/templates/lab_cover_page/Cover_page.html
@@ -13,6 +13,7 @@ In this lab session, you will play two games with 10 rounds for each game. There
 <p>
 Please remain quiet for the entire session. If you have any problem playing the games, raise your hand and you will get assistance.
 </p>
-{% next buttom %}
+<p></p>
+    {% next_button %}
 {% endblock %}
 
