PCS: enter by keyboard => select by mouse

--- a/proportional_cost_sharing/templates/proportional_cost_sharing/Contribute.html
+++ b/proportional_cost_sharing/templates/proportional_cost_sharing/Contribute.html
@@ -24,7 +24,7 @@
 		
     </p>
 	
-    {% formfield player.contribution with label="How much will you contribute to the project (in proportion to the total cost)?"%}
+    {% formfield player.contribution with label="How much will you contribute to the project ?"%}
 
     {% next_button %}
 
